# repaint-server

./: .dockerignore  .editorconfig  .env  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  about.toml  cloudbuild.yml  docker-compose.yml  env_injection.sh  release-notes.md
.github/: CODEOWNERS  release-please-config.json  release-please-manifest.json
.github/workflows/: audit.yml  ci.yml  emergency.yml  release.yml
api/: CHANGELOG.md  Cargo.toml
api/asset/: license.html
api/src/: lib.rs  main.rs  middleware.rs  routes.rs
api/src/middleware/: access_log.rs  auth.rs  track_metrics.rs
api/src/routes/: admin.rs  healthz.rs  license.rs  licenses.txt  metrics.rs  recover.rs  version.rs  visitor.rs
api/src/routes/admin/: event.rs
api/src/routes/admin/event/: image.rs  spot.rs  traffic.rs
api/src/routes/visitor/: image.rs  palette.rs  spot.rs
auth0/: Cargo.toml
auth0/src/: lib.rs
core/: CHANGELOG.md  Cargo.toml
core/patch/: entity.patch  image.patch
core/src/: entity.rs  impls.rs  lib.rs  ty.rs
core/src/entity/: admins.rs  event_beacons.rs  event_images.rs  event_spots.rs  events.rs  events_admins.rs  mod.rs  prelude.rs  traffic_queues.rs  visitor_images.rs  visitor_palettes.rs  visitor_spots.rs  visitors.rs
core/src/impls/: admin.rs  event.rs  image.rs  palette.rs  spot.rs  traffic.rs  transaction.rs  visitor.rs
core/src/ty/: json.rs  mod.rs  string.rs
fcm/: CHANGELOG.md  Cargo.toml
fcm/src/: lib.rs  message.tmp.txt
firestore/: CHANGELOG.md  Cargo.toml
firestore/src/: lib.rs  structure.rs
gcs/: CHANGELOG.md  Cargo.toml
gcs/src/: lib.rs
gmail/: CHANGELOG.md  Cargo.toml
gmail/src/: lib.rs
grafana/: Dockerfile
grafana/dashboards/: dashboard.yml  psql-query.json  psql-status.json
grafana/datasources/: prom.yml  psql.yml
macros/: Cargo.toml
macros/src/: lib.rs  warp_path.rs
migration/: CHANGELOG.md  Cargo.toml
migration/src/: lib.rs  m20230710_221530_init.rs  m20230712_175819_create_event_table.rs  m20230712_180346_create_event_image_table.rs  m20230712_213646_create_event_spot_table.rs  m20230712_214136_create_event_beacon_table.rs  m20230712_215023_create_visitor_table.rs  m20230712_215554_create_visitor_image_table.rs  m20230712_220812_create_visitor_palette_table.rs  m20230712_222322_create_admin_table.rs  m20230713_141545_create_event_admin_table.rs  m20231011_022949_create_visitor_spot_table.rs  m20231012_013522_create_traffic_queue_table.rs  main.rs
model/: CHANGELOG.md  Cargo.toml
model/src/: admin.rs  event.rs  event_beacon.rs  event_image.rs  event_spot.rs  id.rs  lib.rs  visitor.rs  visitor_image.rs  visitor_palette.rs
otp/: CHANGELOG.md  Cargo.toml
otp/src/: lib.rs
pg/: Dockerfile  pg_stat_statements.sh
pg/init/: init.sql
prometheus/: prometheus.yml
pubsub/: CHANGELOG.md  Cargo.toml
pubsub/src/: lib.rs  message.tmp.txt
sg/: CHANGELOG.md  Cargo.toml
sg/src/: lib.rs  message.tmp.txt
src/: main.rs
usecase/: CHANGELOG.md  Cargo.toml
usecase/src/: infra.rs  lib.rs  model.rs  usecase.rs
usecase/src/infra/: email.rs  fcm.rs  firestore.rs  gcs.rs  otp.rs  pubsub.rs  repo.rs
usecase/src/model/: admin.rs  event.rs  fcm.rs  image.rs  mod.rs  otp.rs  palette.rs  spot.rs  traffic.rs  visitor.rs
usecase/src/usecase/: admin.rs  error.rs  event.rs  image.rs  palette.rs  spot.rs  traffic.rs  visitor.rs
util/: Cargo.toml
util/src/: lib.rs
