[package]
name = "repaint-server"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = [
  ".",
  "api",
  "core",
  "fcm",
  "firestore",
  "gcs",
  "migration",
  "model",
  "otp",
  "pubsub",
  "sg",
  "usecase",
]

[dependencies]
repaint-server-api = { path = "api" }
