[workspace]
resolver = "2"
members = [
  "api",
  "core",
  "fcm",
  "firestore",
  "gcs",
  "gmail",
  "migration",
  "model",
  "otp",
  "pubsub",
  "sg",
  "usecase",
  "util",
]

[workspace.package]
edition = "2021"
publish = false
authors = ["Rintaro Itokawa <me@re-taro.dev>"]
license = "Apache-2.0"
