[package]
name = "repaint-server-api"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = "8.3.0"
repaint-server-core = { path = "../core" }
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
] }
serde = "1.0.188"
serde_json = "1.0.107"
teloc = "0.2.0"
tokio = { version = "1.32.0", features = ["rt", "signal", "sync", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
