[package]
name = "repaint-server-api"
version = "1.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
dotenvy = "0.15.7"
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = "8.3.0"
repaint-server-core = { path = "../core" }
repaint-server-fcm = { path = "../fcm" }
repaint-server-firestore = { path = "../firestore" }
repaint-server-gcs = { path = "../gcs" }
repaint-server-otp = { path = "../otp" }
repaint-server-pubsub = { path = "../pubsub" }
repaint-server-sg = { path = "../sg" }
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
] }
sentry = { version = "0.31.7", default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "tower-axum-matched-path",
  "tracing",
  "reqwest",
  "rustls",
] }
sentry-tracing = { version = "0.31.7", features = ["backtrace"] }
serde = "1.0.188"
serde_json = "1.0.107"
static_assertions = "1.1.0"
teloc = "0.2.0"
tokio = { version = "1.32.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[package.metadata.cargo-udeps.ignore]
normal = ["static_assertions"]
