[package]
name = "repaint-server-api"
version = "1.5.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
cfg-if = "1.0.0"
dotenvy = "0.15.7"
hyper = { version = "0.14.27", features = ["full"] }
jsonwebtoken = "8.3.0"
metrics = "0.21.1"
repaint-server-core = { path = "../core" }
repaint-server-fcm = { path = "../fcm" }
repaint-server-firestore = { path = "../firestore" }
repaint-server-gcs = { path = "../gcs" }
repaint-server-gmail = { path = "../gmail", optional = true }
repaint-server-otp = { path = "../otp" }
repaint-server-pubsub = { path = "../pubsub" }
repaint-server-sg = { path = "../sg", optional = true }
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
serde = "1.0.188"
serde_json = "1.0.107"
static_assertions = "1.1.0"
teloc = "0.2.0"
tracing = "0.1.37"
metrics-exporter-prometheus = "0.12.1"

[dependencies.reqwest]
version = "0.11.20"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"]

[dependencies.tower-http]
version = "0.4.4"
features = ["cors", "fs", "trace"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["fmt", "std", "json", "env-filter"]

[features]
default = ["email_sg"]
email_sg = ["repaint-server-sg"]
email_gmail = ["repaint-server-gmail"]

[package.metadata.cargo-udeps.ignore]
normal = ["static_assertions"]
