[package]
name = "repaint-server-core"
version = "3.6.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.74"
cfg-if = "1.0.0"
chrono = "0.4.31"
email_address = "0.2.4"
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
repaint-server-util = { path = "../util" }
serde = "1.0.190"
serde_json = "1.0.108"
teloc = "0.2.0"
thiserror = "1.0.50"
tracing = "0.1.40"

[dependencies.sea-orm]
version = "0.12.4"
features = ["runtime-tokio-rustls", "sqlx-postgres", "postgres-array"]

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
repaint-server-migration = { path = "../migration" }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres"] }
test-log = { version = "0.2.13", default-features = false, features = [
  "trace",
] }
tokio = { version = "1.33.0", features = ["macros"] }
tracing-subscriber = "0.3.17"
ulid = "1.1.0"
