[package]
name = "repaint-server-fcm"
version = "2.0.1"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.73"
google-cloud-token = "0.1.1"
repaint-server-usecase = { path = "../usecase" }
serde_json = "1.0.107"
teloc = "0.2.0"

[dependencies.google-cloud-auth]
version = "0.12.0"
default-features = false
features = ["rustls-tls"]

[dependencies.reqwest]
version = "0.11.21"
default-features = false
features = ["rustls-tls"]
