[package]
name = "repaint-server-firestore"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.31"
firestore = "0.35.2"
futures = "0.3.28"
rand = "0.8.5"
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
serde = "1.0.188"
teloc = "0.2.0"
tokio-stream = "0.1.14"
