[package]
name = "repaint-server-firestore"
version = "2.10.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.31"
firestore = "0.37.2"
futures = "0.3.28"
rand = "0.8.5"
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
serde = "1.0.188"
teloc = "0.2.0"
tokio-stream = "0.1.14"
tracing = "0.1.37"
