[package]
name = "repaint-server-firestore"
version = "3.6.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
firestore = "0.37.2"
futures = "0.3.29"
rand = "0.8.5"
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
serde = "1.0.193"
teloc = "0.2.0"
tokio-stream = "0.1.14"
tracing = "0.1.40"
