[package]
name = "repaint-server-gcs"
version = "3.3.1"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.73"
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
teloc = "0.2.0"
tracing = "0.1.37"

[dependencies.google-cloud-storage]
version = "0.13.1"
default-features = false
features = ["auth", "rustls-tls"]
