[package]
name = "repaint-server-gmail"
version = "1.3.2"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.73"
email_address = "0.2.4"
repaint-server-usecase = { path = "../usecase" }
teloc = "0.2.0"

[dependencies.lettre]
version = "0.10.4"
default-features = false
features = ["smtp-transport", "pool", "rustls-tls", "hostname", "builder"]
