[package]
name = "repaint-server-gmail"
version = "3.5.1"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.74"
email_address = "0.2.4"
repaint-server-usecase = { path = "../usecase" }
teloc = "0.2.0"
tracing = "0.1.40"

[dependencies.lettre]
version = "0.11.1"
default-features = false
features = ["smtp-transport", "pool", "rustls-tls", "hostname", "builder"]
