[package]
name = "repaint-server-migration"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["full"] }

[dependencies.sea-orm-migration]
version = "0.12.3"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
pretty_assertions = "1.4.0"
