[package]
name = "repaint-server-migration"
version = "3.5.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.74"
tokio = { version = "1.33.0", features = ["full"] }

[dependencies.sea-orm-migration]
version = "0.12.4"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
pretty_assertions = "1.4.0"
