[package]
name = "repaint-server-model"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
derivative = "2.2.0"
serde = { version = "1.0.171", features = ["derive"] }

[dependencies.uuid]
version = "1.4.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dev-dependencies]
serde_json = "1.0.103"
