[package]
name = "repaint-server-model"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
derivative = "2.2.0"
email_address = "0.2.4"
serde = "1.0.171"

[dependencies.uuid]
version = "1.4.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[dev-dependencies]
serde_json = "1.0.103"
