[package]
name = "repaint-server-model"
version = "1.2.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
derivative = "2.2.0"
email_address = "0.2.4"
serde = "1.0.188"
ulid = { version = "1.1.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.107"
