[package]
name = "repaint-server-otp"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.73"
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
] }
teloc = "0.2.0"
