[package]
name = "repaint-server-otp"
version = "2.8.1"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.73"
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
teloc = "0.2.0"
tracing = "0.1.37"

[dependencies.reqwest]
version = "0.11.22"
default-features = false
features = ["rustls-tls"]
