[package]
name = "repaint-server-pubsub"
version = "3.5.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.73"
google-cloud-gax = "0.15.0"
google-cloud-googleapis = "0.11.0"
repaint-server-model = { path = "../model" }
repaint-server-usecase = { path = "../usecase" }
serde_json = "1.0.107"
teloc = "0.2.0"
tokio = "1.33.0"
tracing = "0.1.39"

[dependencies.google-cloud-pubsub]
version = "0.21.0"
default-features = false
features = ["auth", "trace", "rustls-tls"]
