[package]
name = "repaint-server-sg"
version = "1.3.1"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.73"
email_address = "0.2.4"
repaint-server-usecase = { path = "../usecase" }
teloc = "0.2.0"

[dependencies.sendgrid]
version = "0.19.2"
default-features = false
features = ["async", "rustls"]
