[package]
name = "repaint-server-usecase"
version = "2.2.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
email_address = "0.2.4"
futures = "0.3.28"
rand = "0.8.5"
repaint-server-model = { path = "../model" }
serde = { version = "1.0.188", features = ["derive"] }
teloc = "0.2.0"
thiserror = "1.0.49"
