[package]
name = "repaint-server-usecase"
version = "3.6.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = "0.4.31"
email_address = "0.2.4"
futures = "0.3.29"
itertools = "0.11.0"
rand = "0.8.5"
repaint-server-model = { path = "../model" }
repaint-server-util = { path = "../util" }
sea-orm = "0.12.4"
serde = { version = "1.0.190", features = ["derive"] }
teloc = "0.2.0"
thiserror = "1.0.50"
